Disable recoding purge-and-suspend memory growth temporarily

Recoding purge-and-suspend memory growth introduced at
crrev.com/2843373004 causes DCHECK errors. This CL removes them
temporarily.

BUG=722792, 670539, 635419

Review-Url: https://codereview.chromium.org/2893863002
Cr-Commit-Position: refs/heads/master@{#472729}

Former-commit-id: 1870aebe1a769e4220a3ba1025bed28d19300c71